implemented gRPC API for email verification
